<resources>
    <string name="app_name">NuberJam</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_profile">Your Profile</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_delete_playlist">Delete Playlist</string>
    <string name="title_add_to_playlist">Add To Playlist</string>
    <string name="title_delete_song">Delete Song</string>
    <string name="title_song_exist">This Song Already Exist</string>
    <string name="text_introduction">Hello, Welcome to NuberJam! We appreciate you using NuberJam, an app that enables you to listen to your favorite songs and discover new music. NuberJam is a music streaming service that connects users with their favorite artists and allows them to continue listening to their favorite songs in a variety of music genres from around the world.  Our Services offer services designed for personal, non-commercial usage.</string>
    <string name="text_acceptance">You directly acknowledge and agree to the numerous terms and conditions that have been specified in these terms and conditions by using and gaining access to Our services. You are conscious and concur with the relevant terms, and moving ahead, Your use of the service or access to it will be deemed acceptance of these terms.</string>
    <string name="text_privacy_policy">Your information must be gathered and used in order for us to provide our services. The terms and data policy also explains the security measures we take to protect your information when using our services, as well as how you may rely on us for access to your information.</string>
    <string name="text_personal_information">To use and access our services, you need to have an account that contains your data and information. You must give us such information to enable us to offer our services to you. The details offered are your full name, username, email address, and the password you set up to access our services. Remember that just your username is visible to the public while all other information is confidential. Protecting the privacy of your password from outside parties is crucial. Until you choose to remove your account, your information will still be registered with us. If you are a regular user of our services, kindly be concerned that you have the option to deactivate your account if you stop using and accessing our services. You are unable to remove your Account from our service if you are a singer and an admin has validated that your song is available on our service.</string>
    <string name="text_personal_data">The use of Your personal information on Our services will be meant as Your official personal data associated with Our services, and Your username will be presented with public properties as Your identity or id in Our public services. Additionally, we gather information about you in order to protect your safety and security, including confirming your identity, managing your account, avoiding fraud, and stopping unlawful conduct.</string>
    <string name="text_security_personal_information">Your personal information will only be used on NuberJam in accordance with our developed security protocols. Your account details, including your username, profile picture, full name, email address, and password, are subject to modification in accordance with NuberJam\'s standards. You need to make sure that changes to your information are what you want them to be, accept personal responsibility for any changes to your information, and acknowledge that you are still obligated by any agreements and legal actions made before the change in information.  You are fully liable for all activities that happen to place under your account, including preserving the secrecy of your account and password. Your password and username won\'t ever be requested by NuberJam. Because of this, we strongly advise against disclosing this information to anybody performing on NuberJam\'s behalf or to any other party whose security cannot be ensured.</string>
    <string name="text_copyright_ip">The intellectual property rights to all of the contents of NuberJam belong to the NuberJam application and to Us, the service\'s proprietors. Reserved are all intellectual property rights. As long as you follow the limitations outlined in these terms and conditions, you are permitted to access and use our services for your own personal use.\n a. You are not allowed to publish NuberJam content again.\n b. Any branding, logos, user interface, design components, or other assets that are supplied by our services are not available for the purpose of use by you.\n c. NuberJam content cannot be rented, sold, or licensed for any occasion.\n d. You are not allowed to copy, duplicate, or recreate any of NuberJam\'s content.\n e. The copyrights and intellectual property rights of our services may not be violated.\n f. You must not intentionally use the service in a way that restricts other users from fully enjoying it, interrupts, interferes with, or damages it, or disables, overburdens, or interferes with how it functions.</string>
    <string name="text_product_service">At NuberJam, we provide a wide range of services. We provide free service. We disclaim all liability for any goods or services provided by third parties. Please be reminded that NuberJam created all of its own designs, logos, programming, and product names. Our services may occasionally go through changes with the goal of improving our goods and enhancing your experience while using NuberJam.</string>
    <string name="text_takedown">The Digital Millennium Copyright Act, sometimes known as the DMCA, is legislation that prohibits the creation and dissemination of digital works that violate other people\'s copyrights. Instructions on how to submit a counter notice will be included in the communication we give you if your content has been deleted in accordance with the DMCA. You can only submit a counter notice if the labeling was incorrect or the information was unintentionally deleted. You might not hear back from us if we deleted your work for reasons not covered by our copyright infringement notification.</string>
    <string name="text_limitation">As long as it\'s legal, NuberJam won\'t be responsible for any incidental or consequential damages you could incur as a result of a breach of an express or implicit guarantee, a breach of contract, negligence, a violation of a legal obligation, or any other legal theory involving the NuberJam App. We would like to remind you that while Our services are free, NuberJam is not responsible for any losses or damages that You may incur that are incidental, direct, indirect, special, or consequential. You do it at your own risk if you use the NuberJam app.</string>
    <string name="text_contact_information">For our service assistance such as questions, comments, complaints, or requests regarding these policies and terms can contact our email at nubennuber@gmail.com\n Please take notice of and thoroughly read these terms. We will make every effort to respond to your request right away. The fact that you have the option to file a complaint with the appropriate data protection authority, if applicable, is not affected by this.</string>
    <string name="text_update_notification">Our services and the terms stated may change or be updated. The terms may change from time to time to represent our services and policies in an accurate and current manner. You are subject to the amended terms if you use our services going forward. You have the option to delete your account if you disagree with the revised conditions.</string>
    <string name="introduction">Introduction</string>
    <string name="u2022_acceptance_of_general_terms">• Acceptance of General Terms</string>
    <string name="u2022_privacy_policy">• Privacy Policy</string>
    <string name="_1_what_kind_of_personal_information_do_we_use">1.What Kind of Personal Information Do We Use?</string>
    <string name="_2_what_we_do_with_your_personal_data">2. What We Do With Your Personal Data</string>
    <string name="_3_security_of_your_personal_information">3. Security of Your Personal Information</string>
    <string name="u2022_copyright_and_intellectual_property">• Copyright and Intellectual Property</string>
    <string name="u2022_products_and_services">• Products and Services</string>
    <string name="u2022_takedowns_under_the_digital_millennium_copyright_act_dmca">• Takedowns under the Digital Millennium Copyright Act (DMCA)</string>
    <string name="u2022_limitation_of_liability">• Limitation of Liability</string>
    <string name="u2022_contact_information">• Contact Information</string>
    <string name="u2022_updates_and_notifications">• Updates and Notifications</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="api_general_error_message">Something went wrong</string>
    <string name="api_internet_error_message">No internet connection</string>
    <string name="edit_success_message">Edit successfully</string>
    <string name="data_not_available">Data not available</string>
    <string name="no_liked_song">No liked song yet</string>
    <string name="form_empty_message">This field can\'t be empty!</string>
    <string name="login_failed_message">Incorrect username/email or password</string>
    <string name="login_success_message">Welcome, %s!</string>
    <string name="register_failed_message">Register failed</string>
    <string name="register_success_message">Register successfully!</string>
    <string name="logout_success_message">Good bye, %s!</string>
    <string name="form_username_contain_spaces">The username can\'t contain spaces</string>
    <string name="form_email_incorrect_format">Incorrect email format</string>
    <string name="form_password_not_same">The passwords are not same</string>
    <string name="loading_for_checking">Loading for checking</string>
    <string name="form_username_used">The username has been used</string>
    <string name="form_email_used">The email has been used</string>
    <string name="current_password_is_incorrect">Current password is incorrect</string>
    <string name="username_or_email_hint">Username or email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="dont_have_account_text">Don\'t have account?</string>
    <string name="register_text">Register</string>
    <string name="name_hint">Name</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="profile_name">Profile Name</string>
    <string name="username">Username</string>
    <string name="your_username">yourUsername</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="your_email">youremail@mail.com</string>
    <string name="change_password">Change Password</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about">About</string>
    <string name="delete_account">Delete Account</string>
    <string name="more">More</string>
    <string name="app_version">Version 1.0.0</string>
</resources>